src/test/ui/issues/issue-26056.stderr
error[E0038]: the trait `Map` cannot be made into an object
  --> $DIR/issue-26056.rs:20:13
   |
LL |         as &dyn Map<Key=u32,MapValue=u32>;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Map` cannot be made into an object
   |
   = note: the trait cannot use `Self` as a type parameter in the supertraits or where-clauses

error: aborting due to previous error

For more information about this error, try `rustc --explain E0038`.
